--- a/console/src/app/modules/refresh-table/refresh-table.component.scss
+++ b/console/src/app/modules/refresh-table/refresh-table.component.scss
@@ -48,6 +48,8 @@
 
       .icon {
         font-size: 1.2rem;
+        height: 1.2rem;
+        width: 1.2rem;
       }
     }
   }
