--- a/console/src/app/modules/sidenav/sidenav.component.scss
+++ b/console/src/app/modules/sidenav/sidenav.component.scss
@@ -133,7 +133,6 @@
 
     .sidenav-content {
       width: 100%;
-      overflow-x: auto;
     }
 
     @media only screen and (min-width: 824px) {
